--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,13 @@
 <body>
   <div class="content" id="js-drop-zone">
 
-    <div class="message intro">
+    <!-- div class="message intro">
       <div class="note">
         BPMN 设计器 <a id="js-create-diagram" href>创建demo</a> .
       </div>
-    </div>
+    </div -->
 
+    <div class="canvas" id="js-canvas"></div>
     <div class="message error">
       <div class="note">
         <!-- p>BPMN 2.0 XML.</p -->
@@ -27,7 +28,6 @@
       </div>
     </div>
 
-    <div class="canvas" id="js-canvas"></div>
   </div>
 
   <div class="io-tools">
